--- a/confs/samples/gitlab.ini
+++ b/confs/samples/gitlab.ini
@@ -8,3 +8,7 @@ method="ssh"
 ; You can restrict to some gitlab groups:
 ;groups[]="one_group"
 ;groups[]="other_group"
+
+;jwt
+jwt_enabled=1
+jwt_secret="secret"
