--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "m4tthumphrey/php-gitlab-api": "^9.0",
-        "php-http/guzzle6-adapter": "^1.1"
+        "php-http/guzzle6-adapter": "^1.1",
+        "firebase/php-jwt": "^5.0",
+        "php-http/mock-client": "^1.1"
     }
 }
